--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "shigatsuel__tsufia-frontend",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "cross-env BROWSER='chrome' react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject",
+    "lint": "eslint \"./src/**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "eslint --fix \"./src/**/*.{ts,tsx,js,jsx}\""
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,18 +27,14 @@
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
-  "scripts": {
-    "start": "cross-env BROWSER='chrome' react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint \"./src/**/*.{ts,tsx,js,jsx}\"",
-    "lint:fix": "eslint --fix \"./src/**/*.{ts,tsx,js,jsx}\""
+  "devDependencies": {
+    "react-app-rewire-alias": "^1.0.3"
   },
   "eslintConfig": {
     "extends": [
