--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.12",
     "react-app-rewire-alias": "^1.0.3"
   },
   "eslintConfig": {
