--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@theme": ["src/theme"],
+      "@theme/*": ["src/theme/*"],
       "@/*": ["src/*"]
     }
   }
