[Add] Button Atom Component

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@atoms/*": ["src/components/atoms/*"],
+      "@molecules/*": ["src/components/molecules/*"],
+      "@organisms/*": ["src/components/organisms/*"],
+      "@pages/*": ["src/components/pages/*"],
+      "@templates/*": ["src/components/pages/templates/*"],
       "@theme": ["src/theme"],
       "@theme/*": ["src/theme/*"],
       "@/*": ["src/*"]
