--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@atoms/*": ["src/components/atoms/*"],
-      "@molecules/*": ["src/components/molecules/*"],
-      "@organisms/*": ["src/components/organisms/*"],
+      "@atoms/*": ["src/components/UI/atoms/*"],
+      "@molecules/*": ["src/components/UI/molecules/*"],
+      "@organisms/*": ["src/components/UI/organisms/*"],
       "@pages/*": ["src/components/pages/*"],
       "@templates/*": ["src/components/pages/templates/*"],
       "@theme": ["src/theme"],
