--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:fix": "eslint --fix \"./src/**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.7.1",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -36,7 +38,8 @@
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.12",
