[Feat] On Login

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,8 +7,10 @@
       "@organisms/*": ["src/components/UI/organisms/*"],
       "@pages/*": ["src/components/pages/*"],
       "@templates/*": ["src/components/templates/*"],
-      "@api-types": ["src/api/types/"],
-      "@api": ["src/api/"],
+      "@api-types": ["src/api/types"],
+      "@api-types/*": ["src/api/types/*"],
+      "@api": ["src/api"],
+      "@api/*": ["src/api/*"],
       "@assets": ["src/assets/*"],
       "@theme": ["src/theme"],
       "@theme/*": ["src/theme/*"],
