--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^4.1.1",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
