--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.12.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
