--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.12.2",
+    "react-kakao-login": "^2.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
