[Add] Login & Logout Router

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -15,6 +15,7 @@
       "@auth": ["src/modules/auth"],
       "@auth/*": ["src/modules/auth/*"],
       "@modules": ["src/modules"],
+      "@routers/*": ["src/routers/*"],
       "@theme": ["src/theme"],
       "@theme/*": ["src/theme/*"],
       "@/*": ["src/*"]
