--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "typesafe-actions": "^5.1.0",
