[Add] Rooms Module Redux Store

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -14,6 +14,8 @@
       "@assets": ["src/assets/*"],
       "@auth": ["src/modules/auth"],
       "@auth/*": ["src/modules/auth/*"],
+      "@rooms": ["src/modules/rooms"],
+      "@rooms/*": ["src/modules/rooms/*"],
       "@modules": ["src/modules"],
       "@routers/*": ["src/routers/*"],
       "@theme": ["src/theme"],
