--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.12.2",
     "react-kakao-login": "^2.1.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
