[Feat] Default Value and Disabled at Update Room Form

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -14,6 +14,8 @@
       "@assets": ["src/assets/*"],
       "@auth": ["src/modules/auth"],
       "@auth/*": ["src/modules/auth/*"],
+      "@room": ["src/modules/room"],
+      "@room/*": ["src/modules/room/*"],
       "@rooms": ["src/modules/rooms"],
       "@rooms/*": ["src/modules/rooms/*"],
       "@modules": ["src/modules"],
