--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "immer": "^9.0.5",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
