[Set] Redux Devtools Extension

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.12",
-    "react-app-rewire-alias": "^1.0.3"
+    "react-app-rewire-alias": "^1.0.3",
+    "redux-devtools-extension": "^2.13.9"
   },
   "eslintConfig": {
     "extends": [
