--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-toast": "^1.0.3",
+    "react-toastify": "^8.0.3",
     "redux": "^4.1.1",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
