--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.24.0",
     "immer": "^9.0.5",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
